--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-	font-family: Helvetica,arial,sans-serif;
+	font-family: arial,sans-serif;
 	font-size: 16px;
 	line-height: 18px;
 	margin: 0;
